<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RouteInformationActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView_routeIsOrdered2"
        style="@style/SmallTextView"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_marginTop="40dp"
        android:paddingStart="40dp"
        android:text="@string/ordered_route"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_routeInfo_estimatedTimeText3" />

    <TextView
        android:id="@+id/textView_routeInfo_ordered"
        android:layout_width="126dp"
        android:layout_height="40dp"
        android:layout_marginStart="203dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_routeInfo_estimatedTime" />

    <ImageView
        android:id="@+id/imageViewIconRouteInformation"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_routeInfo_themeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_routeInfo_themeText3"
        style="@style/SmallTextView"
        android:layout_marginTop="40dp"
        android:paddingStart="40dp"
        android:text="@string/length"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_routeInfo_rewardPointsText" />

    <TextView
        android:id="@+id/textView_routeInfo_length"
        android:layout_width="126dp"
        android:layout_height="40dp"
        android:layout_marginStart="202dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_routeInfo_rewardPoints" />

    <TextView
        android:id="@+id/textView_routeInfo_theme"
        android:layout_width="126dp"
        android:layout_height="40dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_routeInfo_nameOfRoute" />

    <TextView
        android:id="@+id/textView_routeInfo_rewardPoints"
        android:layout_width="126dp"
        android:layout_height="40dp"
        android:layout_marginStart="202dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_routeInfo_theme" />

    <TextView
        android:id="@+id/textView_routeInfo_estimatedTime"
        android:layout_width="126dp"
        android:layout_height="40dp"
        android:layout_marginLeft="202dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_routeInfo_length" />

    <TextView
        android:id="@+id/textView_routeInfo_estimatedTimeText3"
        style="@style/SmallTextView"
        android:layout_marginTop="40dp"
        android:paddingStart="40dp"
        android:text="@string/estimated_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_routeInfo_themeText3" />

    <TextView
        android:id="@+id/textView_routeInfo_POIsofRouteText"
        style="@style/SmallTextView"
        android:layout_marginTop="40dp"
        android:paddingStart="40dp"
        android:text="@string/list_of_POI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_routeIsOrdered2" />

    <TextView
        android:id="@+id/textView_routeInfo_rewardPointsText"
        style="@style/SmallTextView"
        android:layout_marginTop="40dp"
        android:paddingStart="40dp"
        android:text="@string/reward_points"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_routeInfo_themeText" />

    <TextView
        android:id="@+id/textView_routeInfo_nameOfRoute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LargeTextView"
        android:textAlignment="center"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="22dp"
        android:autoSizeTextType="uniform"/>

    <TextView
        android:id="@+id/textView_routeInfo_themeText"
        style="@style/SmallTextView"
        android:paddingStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_routeInfo_nameOfRoute" />

    <Button
        android:id="@+id/btn_routeInfo_back"
        style="@style/LargeButtonText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/btn_routeInfo_startRoute"
        app:layout_constraintEnd_toStartOf="@+id/btn_routeInfo_startRoute"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_routeInfo_startRoute"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_routeInfo_startRoute"
        style="@style/LargeButtonText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/start_route"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary"
        android:layout_marginLeft="225dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView_routeInfo_poiList" />

    <ListView
        android:id="@+id/listView_routeInfo_poiList"
        android:layout_width="340dp"
        android:layout_height="153dp"
        android:layout_marginBottom="84dp"
        android:layout_marginTop="5dp"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_routeInfo_POIsofRouteText"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>